The section1 is already done regarding to base image. Remember about adjusting placement of the Submit button (should be at the bottom of the container).

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         </ul>
     </div>
     <div class="section1">
-        <div class="content">One</div>
+        <div class="content">This Website is Awesome!
+            <div class="text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
+            <button class="signup"><a href=#>Sign up</a></button>
+        </div>
+        <div class="img">this is a placeholder for an image</div>
     </div>
     <div class="section2">
         <div class="content">Two</div>
