--- a/index.html
+++ b/index.html
@@ -22,10 +22,28 @@
         <div class="img">this is a placeholder for an image</div>
     </div>
     <div class="section2">
-        <div class="content">Two</div>
+        <div class="content">Some random information.</div>
+        <div class="boxes">
+            <div class="imgtxt">
+                <div class="box"></div>this is some subtext under an illustration or image
+            </div>
+            <div class="imgtxt">
+                <div class="box"></div>this is some subtext under an illustration or image
+            </div>
+            <div class="imgtxt">
+                <div class="box"></div>this is some subtext under an illustration or image
+            </div>
+            <div class="imgtxt">
+                <div class="box"></div>this is some subtext under an illustration or image 
+            </div>
+        </div>
     </div>
     <div class="section3">
-        <div class="content">Three</div>
+        <div class="content">
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
+            <div class="author">-Thor, God of Thunder</div>
+        </div> 
     </div>
     <div class="section4">
         <div class="content">Four</div>
