The webpage is complete. All sections are done for now.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="section1">
         <div class="content">This Website is Awesome!
             <div class="text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
-            <button class="signup"><a href=#>Sign up</a></button>
+            <a href=#><button class="signup">Sign up</button></a>
         </div>
         <div class="img">this is a placeholder for an image</div>
     </div>
@@ -46,10 +46,16 @@
         </div> 
     </div>
     <div class="section4">
-        <div class="content">Four</div>
+        <div class="bluebox">
+            <div class="content">
+                <div class="invitation1">Call to action! It's time!</div>
+                <div class="invitation2">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <a href=#><button class="signup2">Sign up!</button></a>
+        </div>
     </div>
     <div class="footer">
-        <div class="content">Footer</div>
+        <div class="content">Copyright © The Odin project 2022</div>
     </div>
 </body>
 </html>
